k8s/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text={\"items\":[{\"id\":1,\"name\":\"Café Grano 500g\",\"price\":6.50,\"stock\":40},{\"id\":2,\"name\":\"Taza Aurora\",\"price\":4.20,\"stock\":25}]}"
          ports:
            - containerPort: 5678
          readinessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
spec:
  type: NodePort
  selector:
    app: catalog
  ports:
    - name: http
      port: 80
      targetPort: 5678
      nodePort: 30142  # Ajusta si está ocupado
