k8s/customers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers
  template:
    metadata:
      labels:
        app: customers
    spec:
      containers:
        - name: customers
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text={\"customers\":[{\"id\":1,\"name\":\"Ana Gómez\",\"email\":\"ana@example.com\"}]}"
          ports:
            - containerPort: 5678
          readinessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: customers
spec:
  type: NodePort
  selector:
    app: customers
  ports:
    - name: http
      port: 80
      targetPort: 5678
