k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text={\"orders\":[{\"id\":1,\"customer\":\"Ana Gómez\",\"total\":30.20}]}"
          ports:
            - containerPort: 5678
          readinessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5678
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: orders
spec:
  type: NodePort
  selector:
    app: orders
  ports:
    - name: http
      port: 80
      targe
