k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-aurora-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /api/catalog/?(.*)
            pathType: Prefix
            backend:
              service:
                name: catalog
                port:
                  number: 80
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 80
          - path: /api/customers/?(.*)
            pathType: Prefix
            backend:
              service:
                name: customers
                port:
                  number: 80
